	    This so that any modification is correctly redirected to the correct virtual host etc.
	    + When showing virtual server aliases, if the value returned isn't an array (as when there's
	      only ONE alias), then MAKE it an array. This instead of adding more almost-duplicate code
	      (showing of the value(s)).

	GUI layout changes
	  - Don't show the Kerberos info in the user add details page if KERBEROS isn't an option
	    to choose from.
	  - Don't output the '@' separator between recipient part and email domain if there IS no
	    domain to output in the user add details page.
	  - Change wording of 'Miscellaneous' in tables/domain_details-owner.inc to 'Additional information'
	    which is ... better.
	  - When adding a webserver or DNS domain to a domain/branch, offer to update additionalDomainName
	    and QLC object(s).
	    + 'Update QLC object(s)' checked by default.
	    + Change 'Create DNS object' to checked by default.
	  - Decode DN and all values in pql_create_ldif().
	  - Separate the 'PHP Extensions needed' in 'Home->phpQLAdmin Configuration->Test LDAP-Connection'.
	    + Add checks for more modules: idn, mhash, memcache, gd and krb5.

	API changes
	  - Rewrite (simplify) the API. Move the following function into include/pql.inc as methods
	    of the pql class:
	      include/pql_search.inc:pql_search(),
	      include/pql_search.inc:pql_get_attribute(),
	      include/pql_search.inc:pql_get_dn()
	      include/pql_write.inc:pql_write_add()
	      include/pql_write.inc:pql_write_mod()
	      include/pql_write.inc:pql_write_del()
	      include/pql_write.inc:pql_write_ren()
	    + This lead to changes in the rest of the API as well. No need to call functions with
	      the LDAP linkid any more. Instead, since the pql class handle is global any way, just
	      import it in any functions that need it.
	  - Prefix the kadmin_* functions with the usual 'pql_' prefix.

	Misc changes